# lean-summary-workflow

./: README.md  action.yml  lean_utils.py  llm_provider.py  patch.diff  pyproject.toml  requirements.txt  summary.py
.github/workflows/: ci.yml
prompts/: check_style.md  refine_summary.md  summarize_file.md  synthesize_summary.md  triage.md
tests/: test_llm_provider.py  test_summary.py
